kubernetes/network-policies/network-policies.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: all-pods-deny-all
#   namespace: default
# spec:
#   podSelector: {}
#   policyTypes:
#     - Ingress

# ---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-accepts-internal-and-proxy-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: traefik
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 146.190.68.212/32 # Update to proxy's IP address
    - from:
        - namespaceSelector: {} # Allows all internal traffic
  egress:
    - to:
        - namespaceSelector: {} # Allows traffic to all internal namespaces

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: promtail
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: loki
      ports:
        - protocol: TCP
          port: 3100

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: promtail
        - podSelector:
            matchLabels:
              app: grafana
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: grafana
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: loki
      ports:
        - protocol: TCP
          port: 3100
    - to: # Allow DNS lookup
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
